<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.karavaillancourt.wheelofeats.DetailsActivityFragment">

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/results_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:textSize="@dimen/results_restaurant_name_text_size"
            android:textStyle="bold"
            android:layout_weight="0.6" />

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/results_text_view_padding"
            android:textSize="@dimen/results_restaurant_address_text_size" />

        <TextView
            android:id="@+id/restaurant_distance"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="@dimen/results_text_view_padding"
            android:textSize="@dimen/results_restaurant_distance_text_size" />

        <LinearLayout
            android:layout_weight="0.15"
            android:orientation="horizontal"
            android:id="@+id/open_in_maps_btn"
            android:layout_margin="@dimen/results_btn_top_margin"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#dddddd"
            android:padding="@dimen/results_text_view_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_place_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_open_in_maps_btn_text"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/spin_again_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spin_again_btn_text"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/start_over_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_over_btn_text"
            android:layout_gravity="center" />
    </LinearLayout>

    <!--<ProgressBar-->
    <!--android:visibility="visible"-->
    <!--android:orientation="vertical"-->
    <!--android:id="@+id/progress_bar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="center">-->
    <!--</ProgressBar>-->


</RelativeLayout>
